@@ -1,4 +1,4 @@
-.TH PCRE2API 3 "02 September 2019" "PCRE2 10.34"
+.TH PCRE2API 3 "26 December 2019" "PCRE2 10.35"
 .SH NAME
 PCRE2 - Perl-compatible regular expressions (revised API)
 .sp
@@ -3362,11 +3362,12 @@ space for the trailing zero. Note that in order to compute the required length,
 of giving an error return as soon as the buffer overflows. Note also that the
 length is in code units, not bytes.
 .P
-In the replacement string, which is interpreted as a UTF string in UTF mode,
-and is checked for UTF validity unless the PCRE2_NO_UTF_CHECK option is set, a
-dollar character is an escape character that can specify the insertion of
-characters from capture groups or names from (*MARK) or other control verbs
-in the pattern. The following forms are always recognized:
+The replacement string, which is interpreted as a UTF string in UTF mode,
+is checked for UTF validity unless the PCRE2_NO_UTF_CHECK option is set. If the
+PCRE2_SUBSTITUTE_LITERAL option is set, it is not interpreted in any way. By
+default, however, a dollar character is an escape character that can specify
+the insertion of characters from capture groups or names from (*MARK) or other
+control verbs in the pattern. The following forms are always recognized:
 .sp
   $$                  insert a dollar character
   $<n> or ${<n>}      insert the contents of group <n>
@@ -3391,6 +3392,11 @@ facility can be used to perform simple simultaneous substitutions, as this
 .sp
 As well as the usual options for \fBpcre2_match()\fP, a number of additional
 options can be set in the \fIoptions\fP argument of \fBpcre2_substitute()\fP.
+.P
+As mentioned above, PCRE2_SUBSTITUTE_LITERAL causes the replacement string to 
+be treated as a literal, with no interpretation. If this option is set, 
+PCRE2_SUBSTITUTE_EXTENDED, PCRE2_SUBSTITUTE_UNKNOWN_UNSET, and 
+PCRE2_SUBSTITUTE_UNSET_EMPTY are irrelevant and are ignored.
 .P
 PCRE2_SUBSTITUTE_GLOBAL causes the function to iterate over the subject string,
 replacing every matching substring. If this option is not set, only the first
@@ -3878,6 +3884,6 @@ Cambridge, England.
 .rs
 .sp
 .nf
-Last updated: 02 September 2019
+Last updated: 26 December 2019
 Copyright (c) 1997-2019 University of Cambridge.
 .fi
